# ouroboros-leios

./: .dockerignore  .envrc  .gitattributes  .gitignore  .hlint.yaml  404.html  CHANGELOG.md  CNAME  CODING-STANDARDS.md  CONTRIBUTING.md  Dockerfile  Logbook.md  NewLinearLeiosMiniProtocols.md  README.md  SECURITY.md  build.nix  cabal.project  flake.nix  formal-spec  index.html  lakefile.lean  ouroboros-leios-sim.cabal  package-lock.json  pre-commit-hooks.nix  sitemap.xml  vscode.sh
.github/: CODEOWNERS
analysis/deltaq/linear-leios/: .envrc  README.md  REPORT.md  build.nix  cabal.project  leios-deltaq.cabal
analysis/sims/trace-processor/: ReadMe.md  build.nix  generic-analysis.R  trace-processor.cabal
conformance-testing/: README.md  leios-conformance.cabal
conformance-testing/app/: External.hs  Pipe.hs
crypto-benchmarks.rs/: .gitignore  Cargo.toml  ReadMe.md  Specification.md  flake.nix
crypto-benchmarks.rs/benches/: fait_accompli_bench.rs  serialization_bench.rs  sortition_bench.rs  vote_bench.rs  vrf_bench.rs
crypto-benchmarks.rs/demo/: README.md
crypto-benchmarks.rs/demo/run64/: demo.json
crypto-benchmarks.rs/demo/scripts/: 00_set_cli.sh  10_init_inputs.sh  20_make_registry.sh  25_export_demo_json.sh  30_cast_votes.sh  40_make_certificate.sh  50_verify_certificate.sh  60_export_demo_json.sh  60_pretty_print_cert.sh  70_run_one.sh  80_sweep.sh  85_plot_sweep.sh  extract_committee.py  pretty_cert.py
crypto-benchmarks.rs/demo/ui/: server.py
crypto-benchmarks.rs/nix/: configuration.nix  systems.nix
crypto-benchmarks.rs/src/: api.rs  bls.rs  bls_util.rs  bls_vote.rs  cert.rs  fait_accompli.rs  key.rs  lib.rs  main.rs  primitive.rs  realism.rs  registration.rs  registry.rs  sortition.rs  util.rs  vote.rs  vrf.rs
crypto-benchmarks.rs/tests/: api_tests.rs  cert_tests.rs  fait_accompli_tests.rs  registration_tests.rs  serialization_tests.rs  sortition_tests.rs  vote_tests.rs
delta_q/: Cargo.toml  README.md  Towards_Load_Analysis.md  Trunk.toml  comparison_hs.txt  comparison_rs.txt  diffusion.jq  index.html  models.txt  styles.css
delta_q/docs/: Report 2025-01.md  Towards_Load_Analysis.md  cluster_coeff.jq  convert.jq  convert_arrivals.jq  latencies.jq  one_hop.jq  overview.d2  praos_diffusion.sh
delta_q/linear-leios/: CHANGELOG.md  leios-deltaq.cabal
delta_q/notebooks/: linear-leios-analysis.ipynb
delta_q/src/: agent.rs  cdf.rs  compaction.rs  delta_q.rs  lib.rs  outcome.rs  parser.rs  render.rs  step_function.rs  step_value.rs
foo/: CHANGELOG.md  frisby-foo.cabal  frisby-sampler.html
foo/docs/: Foo.md
foo/src/: Foo.hs
leios-conformance/: CHANGELOG.md  README.md  leios-conformance.cabal
leios-conformance/app/: External.hs  Pipe.hs
leios-conformance/src/Leios/: Diffusion.hs
leios-crypto-benchmarks/: Cargo.toml
leios-crypto-benchmarks/benches/: sortition_bench.rs  vote_bench.rs  vrf_bench.rs
leios-crypto-benchmarks/src/: bls.rs  lib.rs  main.rs  sortition.rs  vote.rs  vrf.rs
leios-crypto-benchmarks/tests/: sortition_tests.rs
leios-sim/: index.html  index.js  leios-sim.cabal  leios.css  shell.nix
leios-sim/app/: Main.hs
leios-sim/src/: Types.hs
leios-sim/src/Data/: Bytes.hs
leios-sim/src/Leios/: Model.hs  Node.hs  Server.hs  Trace.hs  Types.hs
leios-sim/src/Network/: FFD.hs
leios-sim/src/Node/: Types.hs
leios-sim/test/: Main.hs
leios-sim/test/Leios/: ModelSpec.hs
leios-trace-hs/: CHANGELOG.md  LICENSE  build.nix  cabal.project  leios-trace-hs.cabal
leios-trace-hs/src/: ChainEvents.hs  JSONCompat.hs  LeiosConfig.hs  LeiosEvents.hs  LeiosTopology.hs  LeiosTypes.hs
leios-trace-verifier/hs-src/: trace-parser.cabal
leios-trace-verifier/hs-src/app/: Main.hs
leios-trace-verifier/hs-src/src/: LeadershipSchedule.hs  Lib.hs  LinearLeiosLib.hs  ShortLeiosLib.hs
leios-trace-verifier/hs-src/test/: Spec.hs
net-rs/net-cli/: Cargo.toml  README.md
net-rs/net-cli/src/: blockfetch.rs  capture.rs  chainsync.rs  connect.rs  follow.rs  handshake.rs  main.rs  multi_follow.rs  peershare.rs  scheduler_args.rs  serve.rs  submit.rs
net-rs/net-cluster/: Cargo.toml  OpenAPI.yaml  README.md  THREATS.md  run-local-swagger.sh
net-rs/net-cluster/configs/: cluster-100n-d10-NA0.200.toml  cluster-mainnet-1.toml  cluster-mainnet.toml  sample-cluster-equivocator.toml  sample-cluster-lazy-voter.toml  sample-cluster-leios-baseline.toml  sample-cluster-t22.toml  sample-cluster-v4-mini.toml  sample-cluster.toml
net-rs/net-core/: Cargo.toml  README.md
net-rs/net-node/: Cargo.toml  README.md
nix/dummy-project/: CHANGELOG.md  LICENSE  dummy-project.cabal
shared-rs/consensus/: CLAUDE.md  Cargo.toml  README.md
shared-rs/tcp-model/: Cargo.toml
sim-rs/: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  Dockerfile  IMPLEMENTATION.md  LINEAR_LEIOS.md  README.md  merge-con-rs-plan.md  merge-shared-consensus-plan.md  txn_diffusion.sh  voting_results.csv
sim-rs/docs/: component-detail.d2  component.d2  container.d2  tx-protocol.d2
sim-rs/implementations/: CLASSIC_LEIOS.md  LINEAR_LEIOS.md  STRACCIATELLA.md
sim-rs/parameters/: 1000x.yaml  100x.yaml  10x.yaml  config.default.yaml  config.schema.json  full.yaml  late-eb-attack.yaml  lazy-20pct.yaml  linear-with-tx-references.yaml  linear.yaml  memory-limit-safe.yaml  memory-limit.yaml  no-caps.yaml  no-ibs.yaml  test-shard1.yaml  test-shard2.yaml  test-shard4.yaml  turbo.yaml  tx-references.yaml
sim-rs/scripts/: cip-turbo-benchmark.sh  cip-voting-options.sh  determinism-check.sh  determinism-run.sh  generate-topology.py  generate-trace.sh  generate_topology.py  poll-sim.sh  summarize-topology.py  summarize_topology.py
sim-rs/sim-cli/: Cargo.toml  build.rs
sim-rs/sim-core/: Cargo.toml
sim-rs/src/: clock.rs  config.rs  events.rs  main.rs  model.rs  network.rs  probability.rs  sim.rs
sim-rs/test_data/: medium.toml  medium.yaml  organic.yaml  realistic.toml  simple.toml  simple.yaml  simplified.toml  simplified.yaml  small.toml  small.yaml  thousand.toml
topology-checker/: .gitignore  Cargo.toml  README.md
topology-checker/src/: main.rs
trace-parser/hs-src/: trace-parser.cabal
(+12433 files in other folders)
