cabal-version: 3.4
name:          leios-conformance
version:       0.1.0.0
license:       Apache-2.0
license-file:  LICENSE
author:        Arnaud Bailly
maintainer:    arnaud@pankzsoft.com
category:      Testing
build-type:    Simple

common warnings
  ghc-options:        -Wall
  default-extensions:
    DuplicateRecordFields
    GADTs
    ImportQualifiedPost
    KindSignatures
    NamedFieldPuns

library
  import:           warnings
  exposed-modules:
    Leios.Conformance.Model
    Leios.Conformance.Test
    Leios.Conformance.Test.External

  build-depends:
    , aeson
    , base
    , bytestring
    , containers
    , data-default
    , leios-spec
    , mtl
    , pretty
    , QuickCheck
    , quickcheck-dynamic
    , quickcheck-instances
    , stm
    , text

  hs-source-dirs:   src
  default-language: Haskell2010

executable leios-simulation-pipe
  import:           warnings
  default-language: Haskell2010
  hs-source-dirs:   app
  main-is:          Pipe.hs
  other-modules:    Paths_leios_conformance
  build-depends:
    , aeson
    , base
    , bytestring
    , containers
    , contra-tracer
    , data-default
    , io-classes
    , leios-conformance
    , optparse-applicative
    , text

executable leios-conformance-test
  import:           warnings
  default-language: Haskell2010
  other-modules:
    Leios.Conformance.ExternalSpec
    Paths_leios_conformance

  hs-source-dirs:   app
  main-is:          External.hs
  build-depends:
    , aeson
    , base
    , bytestring
    , hspec
    , leios-conformance
    , QuickCheck

  ghc-options:      -rtsopts -threaded
