[package]
name = "leios_crypto_benchmarks"
version = "0.1.0"
edition = "2021"

[dependencies]
blst = "0.3.13"
criterion = "0.5.1"
pallas = "0.32.0"
quickcheck = "1.0.3"
quickcheck_macros = "1.0.0"
rand = "0.8.5"
rand_chacha = "0.3.1"
rustc_apfloat = "0.2.2"
serde = "1.0.217"
serde_cbor = "0.11.2"

[[bench]]
name = "sortition_bench"
harness = false

[[bench]]
name = "vrf_bench"
harness = false

[[bench]]
name = "vote_bench"
harness = false

[[bench]]
name = "serialization_bench"
harness = false
