[package]
name = "delta_q"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "editor"
required-features = ["main"]

[[bin]]
name = "editor-web"
required-features = ["web"]

[features]
main = ["actix-web", "include_dir", "parking_lot", "tracing-subscriber"]
web = [
  "yew",
  "wasm-bindgen",
  "wasm-bindgen-futures",
  "js-sys",
  "web-sys",
  "gloo-utils",
  "serde_json",
  "charts-rs",
]

[dependencies]
actix-web = { version = "4.9.0", optional = true }
charts-rs = { version = "0.3.17", optional = true }
gloo-utils = { version = "0.2.0", optional = true }
include_dir = { version = "0.7.4", optional = true }
iter_tools = "0.21.0"
js-sys = { version = "0.3.70", optional = true }
parking_lot = { version = "0.12.3", optional = true }
serde = { version = "1.0.210", features = ["derive"] }
serde_json = { version = "1.0.128", optional = true }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = [
  "env-filter",
], optional = true }
wasm-bindgen = { version = "0.2.93", optional = true }
wasm-bindgen-futures = { version = "0.4.43", optional = true }
yew = { version = "0.21.0", features = ["csr"], optional = true }

[dependencies.web-sys]
version = "0.3.70"
optional = true
features = ["Window", "Request", "Location"]

[dev-dependencies]
maplit = "1.0.2"
