[package]
name = "delta_q"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "editor-web"

[dependencies]
gloo-utils = { version = "0.2.0" }
itertools = "0.13.0"
js-sys = { version = "0.3.70" }
serde = { version = "1.0.210", features = ["derive"] }
serde_json = { version = "1.0.128" }
smallstr = { version = "0.3.0", features = ["std", "serde"] }
tracing = "0.1.40"
wasm-bindgen = { version = "0.2.93" }
wasm-bindgen-futures = { version = "0.4.43" }
web-sys = { version = "0.3.70", features = ["MessageEventInit"] }
winnow = "0.6.20"
yew = { version = "0.21.0", features = ["csr"] }
yew-agent = "0.3.0"
yew-hooks = "0.3.2"

[dev-dependencies]
maplit = "1.0.2"
