cabal-version:      3.0
name:               frisby-foo
version:            0.1.0.0
-- synopsis:
-- description:
license:            Apache-2.0
license-file:       LICENSE
author:             Nicolas Frisby
maintainer:         nick.frisby@iohk.io
-- copyright:
category:           Concurrency
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options: -Wall

library
    import:           warnings
    exposed-modules:  Foo
    -- other-modules:
    -- other-extensions:
    build-depends:    base ^>=4.18.2.1
                    , containers
                    , random
                    , random-shuffle
    hs-source-dirs:   src
    default-language: GHC2021
