cabal-version:      3.0
name:               leios-sim
version:            0.1.0.0
synopsis:           A simulator for Ouroboros Leios protocol
license:            Apache-2.0
license-file:       LICENSE
author:             IOG
maintainer:         renate.eilers@iohk.io
bug-reports:        https://github.com/input-output-hk/ouroboros-leios/issues
build-type:         Simple
extra-source-files:
  index.html
  index.js
  leios.css

data-files:
  index.html
  index.js
  leios.css

common warnings
  ghc-options:      -Wall
  default-language: Haskell2010

library
  exposed-modules:
    Leios.Network.FFD
    Leios.Node
    Leios.Node.Types
    Leios.Server
    Leios.Trace
    Leios.Types
    Leios.Model

  other-modules:    Data.Bytes
  hs-source-dirs:   src
  build-depends:
    , aeson
    , base
    , base16-bytestring
    , bytestring
    , containers
    , contra-tracer
    , io-classes
    , QuickCheck
    , random
    , scotty
    , text
    , time
    , wai
    , wai-extra
    , wai-websockets
    , warp
    , websockets
    , pretty-simple
    , text
    , extra
    , pqueue

  default-language: Haskell2010

executable leios
  import:         warnings
  ghc-options:    -threaded -rtsopts
  main-is:        Main.hs
  build-depends:
    , aeson
    , base
    , base16-bytestring
    , bytestring
    , io-classes
    , io-sim
    , leios-sim
    , QuickCheck

  hs-source-dirs: app

test-suite leios-sim-test
  import:         warnings
  ghc-options:    -threaded -rtsopts
  main-is:        Main.hs
  build-depends:
    , base
    , containers
    , hspec
    , leios-sim
    , QuickCheck

  hs-source-dirs: test
  type:           exitcode-stdio-1.0
