[package]
name = "sim-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
ctrlc = "3"
futures = "0.3"
netsim-async = { git = "https://github.com/SupernaviX/ce-netsim.git", rev = "8569a6f" }
priority-queue = "2"
rand = "0.8"
rand_chacha = "0.3"
rand_distr = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
toml = "0.8"
tracing = "0.1"
tracing-subscriber = "0.3"
