[package]
name = "topology-checker"
version = "0.1.0"
edition = "2021"

[dependencies]
argmin = { version = "0.10.0", features = ["rayon"] }
argmin-math = "0.4.0"
argmin-observer-slog = "0.1.0"
clap = { version = "4.4.11", features = ["derive"] }
delta_q = { path = "../delta_q" }
indexmap = { version = "2.1.0", features = ["serde"] }
nalgebra = "0.33.2"
rand = "0.9.0"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
terminal_size = "0.4.1"
textplots = { version = "0.8.6", path = "../../textplots-rs" }
