cabal-version:      2.4
name:               trace-parser
version:            0.1.0.0
synopsis:

-- A longer description of the package.
-- description:
homepage:

-- A URL where users can report bugs.
-- bug-reports:
license:            NONE
author:             Yves Hauser
maintainer:         yves.hauser@iohk.io

-- A copyright notice.
-- copyright:
-- category:

data-dir:
  data
data-files:
  config.yaml
  topology.yaml
  valid/*.jsonl
  invalid/*.jsonl

common globalOptions
    default-language: Haskell2010
    build-depends:
        base
    default-extensions:
        PolyKinds EmptyDataDecls EmptyCase ExistentialQuantification
        ScopedTypeVariables NoMonomorphismRestriction RankNTypes
        PatternSynonyms DeriveGeneric
    ghc-options:
        -Wno-overlapping-patterns

executable leios-trace-verifier
    import: globalOptions
    main-is: app/Main.hs
    build-depends:
      , base
      , bytestring
      , containers
      , leios-trace-hs
      , optparse-applicative
      , text
      , trace-parser
      , yaml

    default-language: Haskell2010
    ghc-options:      -Wall

test-suite test-trace-verifier
  type:                exitcode-stdio-1.0
  main-is:          Spec.hs
  other-modules:    Paths_trace_parser
                    Spec.Generated
                    Spec.Golden
  hs-source-dirs:     test
  build-depends:
      base
    , bytestring
    , containers
    , data-default
    , directory
    , filepath
    , hspec
    , leios-trace-hs
    , lens
    , mtl
    , QuickCheck
    , text
    , trace-parser
    , yaml
  default-language:    Haskell2010

library
    import: globalOptions
    hs-source-dirs: src
    exposed-modules: Lib
    build-depends:
      , aeson
      , base
      , bytestring
      , containers
      , ieee
      , leios-trace-hs
      , text
-- This will be generated automatically when building with nix
    other-modules:
