[package]
name = "net-cluster"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time", "signal", "process", "io-util"] }
axum = "0.7"
async-stream = "0.3"
futures-util = "0.3"
clap = { version = "4", features = ["derive"] }
figment = { version = "0.10", features = ["toml"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
rand = "0.8"
tower-http = { version = "0.6", features = ["cors"] }
tracing = "0.1"
tracing-subscriber = "0.3"

[dev-dependencies]
tempfile = "3"
tower = { version = "0.5", features = ["util"] }
