[package]
name = "shared-consensus"
version = "0.1.0"
edition = "2021"
description = "Sans-IO Cardano consensus core (Praos chain selection, Linear Leios CIP-0164 voting and EB elections) shared by Cardano Leios simulators and node implementations."

[dependencies]
serde = { version = "1", features = ["derive"] }
rand = "0.8"
blake2b_simd = "1"
tracing = "0.1"
minicbor = { version = "0.25", features = ["std"] }

[dev-dependencies]
serde_json = "1"
