[package]
name = "sim-cli"
version = "0.1.0"
edition = "2021"
default-run = "sim-cli"

[dependencies]
anyhow = "1"
average = "0.15"
clap = { version = "4", features = ["derive"] }
ctrlc = "3"
pretty-bytes-rust = "0.3.0"
rand = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sim-core = { path = "../sim-core" }
tokio = { version = "1", features = ["full"] }
tokio-util = "0.7"
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
