[package]
name = "sim-cli"
version = "0.1.0"
edition = "2021"
default-run = "sim-cli"
rust-version = "1.82"

[dependencies]
anyhow = "1"
average = "0.15"
clap = { version = "4", features = ["derive"] }
ctrlc = "3"
figment = { version = "0.10", features = ["yaml"] }
itertools = "0.13"
netsim-core = { git = "https://github.com/input-output-hk/ce-netsim", rev = "9d1e26c" }
pretty-bytes-rust = "0.3.0"
rand = "0.8"
statrs = "0.18"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
sim-core = { path = "../sim-core" }
tokio = { version = "1", features = ["full"] }
tokio-util = "0.7"
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
