[package]
name = "sim-cli"
version = "1.2.0"
edition = "2024"
default-run = "sim-cli"
rust-version = "1.88"

[dependencies]
anyhow = "1"
async-compression = { version = "0.4", features = ["tokio", "gzip"] }
average = "0.16"
clap = { version = "4", features = ["derive"] }
ctrlc = "3"
figment = { version = "0.10", features = ["yaml"] }
itertools = "0.14"
minicbor-serde = { version = "0.6", features = ["alloc"] }
netsim-core = { git = "https://github.com/input-output-hk/ce-netsim", rev = "9d1e26c" }
pretty-bytes-rust = "0.3.0"
rand = "0.9"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
sim-core = { path = "../sim-core" }
statrs = "0.18"
tokio = { version = "1", features = ["full"] }
tokio-util = "0.7"
toml = "0.9"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[build-dependencies]
vergen-gitcl = { version = "1", features = ["build"] }
