[package]
name = "sim-core"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
async-stream = "0.3"
futures = "0.3"
netsim-async = { git = "https://github.com/SupernaviX/ce-netsim.git", rev = "535ae49" }
priority-queue = "2"
rand = "0.8"
rand_chacha = "0.3"
rand_distr = "0.4"
serde = { version = "1", features = ["derive"] }
tokio = { version = "1", features = ["macros", "time"] }
tokio-util = "0.7"
tracing = "0.1"
