[package]
name = "sim-core"
version = "1.4.0"
edition = "2024"
rust-version = "1.88"

[dependencies]
anyhow = "1"
async-stream = "0.3"
dashmap = "6"
futures = "0.3"
netsim-async = { git = "https://github.com/input-output-hk/ce-netsim.git", rev = "9d1e26c" }
num-traits = "0.2"
priority-queue = "2"
rand = "0.9"
rand_chacha = "0.9"
rand_distr = "0.5"
serde = { version = "1", features = ["derive"] }
tokio = { version = "1", features = ["macros"] }
tokio-util = "0.7"
tracing = "0.1"

[dev-dependencies]
serde_yaml = "0.9"
tokio = { version = "1", features = ["macros", "rt"] }
