cabal-version:      3.0
name:               leios-deltaq
version:            0.1.0.0
license:            Apache-2.0
license-file:       LICENSE
author:             Yves Hauser
maintainer:         yves.hauser@iohk.io
build-type:         Simple

common warnings
    ghc-options: -Wall

library 
    import:           warnings
    build-depends:    base ^>=4.20.0.0
                    , deltaq
                    , probability-polynomial
                    , random
                    , statistics
    hs-source-dirs:   src
    exposed-modules:  RbDiffusion
                    , EbDiffusion
                    , Stats
    default-language: Haskell2010

executable leios-deltaq-analysis
    import:           warnings
    main-is:          Main.hs
    build-depends:    base ^>=4.20.0.0
                    , deltaq
                    , leios-deltaq
                    , probability-polynomial
                    , Chart >= 1.8 && < 2.0
                    , Chart-cairo
    hs-source-dirs:   app
    default-language: Haskell2010
