cabal-version:      3.0
name:               leios-deltaq
version:            0.1.0.0
license:            Apache-2.0
license-file:       LICENSE
author:             Yves Hauser
maintainer:         yves.hauser@iohk.io
build-type:         Simple

common warnings
    ghc-options: -Wall

library
    import:           warnings
    build-depends:    base
                    , deltaq
                    , statistics
    hs-source-dirs:   src
    exposed-modules:  Analysis.Leios
                    , DeltaQ.Common
                    , DeltaQ.Distributions
                    , DeltaQ.Leios
                    , DeltaQ.Leios.EmpiricalDistributions
                    , DeltaQ.Praos
                    , Statistics.Leios
                    , Statistics.Praos
    ghc-options: -O2
    default-language: Haskell2010

executable leios-deltaq-diagrams
    import:           warnings
    main-is:          Diagrams.hs
    build-depends:    base
                    , deltaq
                    , diagrams-lib
                    , diagrams-svg
                    , leios-deltaq
    hs-source-dirs:   app
    default-language: Haskell2010

executable leios-deltaq-estimates
    import:           warnings
    main-is:          Estimates.hs
    build-depends:    async
                    , base
                    , leios-deltaq
    hs-source-dirs:   app
    ghc-options: -O2 -threaded -rtsopts "-with-rtsopts=-N -s"
    default-language: Haskell2010

executable leios-deltaq-plots
    import:           warnings
    main-is:          Plots.hs
    build-depends:    base
                    , deltaq
                    , leios-deltaq
                    , Chart >= 1.8 && < 2.0
                    , Chart-cairo
    hs-source-dirs:   app
    ghc-options: -O2
    default-language: Haskell2010

executable leios-deltaq-stats
    import:           warnings
    main-is:          Stats.hs
    build-depends:    async
                    , base
                    , bytestring
                    , cassava
                    , leios-deltaq
    hs-source-dirs:   app
    ghc-options: -O2 -threaded -rtsopts "-with-rtsopts=-N -s"
    default-language: Haskell2010
