cabal-version:      3.0
name:               betti0
version:            0.1.0.0
-- synopsis:
-- description:
license:            MIT
license-file:       LICENSE
author:             Brian W Bush
maintainer:         brian.bush@iohk.io
-- copyright:
category:           Network
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options: -Wall

executable betti0
    import:           warnings
    main-is:          Main.hs
    -- other-modules:
    -- other-extensions:
    build-depends:    base ^>=4.20.0.0
                 ,    array
                 ,    bytestring
                 ,    containers
                 ,    deepseq
                 ,    parallel
                 ,    vector
                 ,    zlib
    hs-source-dirs:   app
    default-language: Haskell2010
    ghc-options: -O2 -threaded
